// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditTitle isReadOnly 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    aria-level="1"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-flush-both-isDisabled-euiInlineEditReadMode-isReadOnly"
    data-test-subj="euiInlineReadModeButton"
    disabled=""
    role="heading"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
          role="presentation"
        >
          Hello World!
        </h1>
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  />
</div>
`;

exports[`EuiInlineEditTitle renders 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size l 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-l-l-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-l"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size m 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-m-m-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-m"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size s 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-s-s-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-s"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xs-xs-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xs"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xxs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xxs-xxs-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xxs"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditTitle title sizes renders size xxxs 1`] = `
<div
  class="euiInlineEdit euiInlineEditTitle testClass1 testClass2 emotion-euiInlineEditTitle-xxxs-xxxs-euiTestCss"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        <h1
          class="euiTitle eui-textTruncate emotion-euiTitle-xxxs"
        >
          Hello World!
        </h1>
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;
